--- a/index.html
+++ b/index.html
@@ -25,13 +25,25 @@
     window.onload = checkPassword;
   </script>
 <script>
-    const input = document.getElementById('url-content');
+function replaceText() {
+  // 获取页面上的所有文本节点
+  const textNodes = document.querySelectorAll(":not(iframe):not(script):not(style):not(br):not(meta):not(link)");
 
-input.addEventListener('input', function() {
-  const oldValue = this.value;
-  const newValue = oldValue.replace('image.114519.xyz', 'image114519xyz.cachefly.net');
-  this.value = newValue;
-});
+  // 替换文本节点中的内容
+  textNodes.forEach(node => {
+    const regex = /https:\/\/image\.114519\.xyz\/([^"']+)/g; // 匹配 image.114519.xyz 的正则表达式
+    const replacement = "https://image114519xyz.cachefly.net/$1"; // 替换为 image114519xyz.cachefly.net
+
+    const modifiedText = node.textContent.replace(regex, replacement);
+    if (modifiedText !== node.textContent) {
+      node.textContent = modifiedText;
+    }
+  });
+}
+
+// 每秒运行一次 replaceText 函数
+setInterval(replaceText, 1000);
+
  </script>
   </head>
   <body id="aaa"  >
