--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ inputElements.forEach(input => {
 
 }
 
-// 每秒运行一次 replaceText 函数
-setInterval(replaceText, 1000);
+// 每200ms运行一次 replaceText 函数
+setInterval(replaceText, 200);
 
  </script>
 
